Prepare Kendive 0.3.0-rc.1